@@ -1,5 +1,9 @@
 2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* GridTest.cs: Added StarSizing test.
+
+2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* GridTest.cs: Added GridPropertiesCauseLayoutChanges test.
 
 2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
